Implementação dos métodos addWorkshopManufacturer e findWorkshopEntity, e refatorações na service.
